# camp_reviews_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 0001_create_review_table.sql  0001_create_schema.sql  0002_create_camp_request.sql
src/: main.rs
src/auth/: mod.rs
src/models/: camp.rs  camp_request.rs  db.rs  favorite_camps.rs  mod.rs  review.rs  user.rs
src/routes/: camp_requests.rs  camps.rs  custom_warp_filters.rs  mod.rs  reviews.rs  users.rs
web-folder/: index.html
