[package]
name = "camp_review_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
tokio = { version = "*", features = ["full"] }
warp = "*"
reqwest = {version = "*", features = ["blocking"]}
scraper = "*"

# JSON libs
serde = "*"
serde_json = "*"
serde_derive = "*"
chrono = {version = "0.4", features = ["serde"]}

#DB libs
sqlx = { version = "*", features = [ "runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "json"] }
urlencoding = "*"
dotenvy = "*"
dotenvy_macro = "*"
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "*"
